fixed recent photo path placeholder fixed account details alignment

--- a/css/passwordReset.css
+++ b/css/passwordReset.css
@@ -9,12 +9,21 @@
 }
 
 .passwordDetails {
-    width: 80%;
+    width: 65%;
     height: 2em;
+}
+
+.description {
+    width: 80%;
+}
+
+.accountDetails {
+    float: left;
 }
 
 .passwordDetails input {
     width: 17em;
+    float: right;
 }
 
 #performPasswordReset .passwordDetails input {
